--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "dev": "nodemon index"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
 }
