--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
+  "name": "goit-node-hw-01",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
     "dev": "nodemon index"
   },
+  "keywords": [],
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
   "dependencies": {
+    "commander": "^11.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "nanoid": "^3.3.4",
+    "path": "^0.12.7"
   }
 }
